samples/_failures_safe/1761652948_0d7b55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb235a85.c: In function ‘main’:
./samples/SAFE/__tmp_cb235a85.c:166:5: error: expected declaration or statement at end of input
  166 |     printf("Processing time: %u ms\n", stats.processing_time_ms);
      |     ^~~~~~
